macros/context-derive/tests/ui/04_missing_config_attr.stderr
error: No field with #[config] attribute found, please add #[config] to the field that holds the `gadget_sdk::config::GadgetConfiguration`
 --> tests/ui/04_missing_config_attr.rs:5:8
  |
5 | struct MyContext {
  |        ^^^^^^^^^
